maze.lessons.maze.island.IslandMaze.scala.error
Escaper:4: error: not found: value Dirction
    if (getDirection==Dirction.nord && estFaceMur==false){
                      ^